Update title and headings for language translation

--- a/arabic_keyboard_converter.html
+++ b/arabic_keyboard_converter.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>محول الكيبورد العربي</title>
+<title>ترجمة اللغة القطوزية</title>
 <style>
 body { font-family: 'Segoe UI', Tahoma, sans-serif; padding: 40px; direction: rtl; text-align: right; background: #1e1e2f; color: #fff; }
 h1 { text-align: center; margin-bottom: 30px; color: #ffcc00; }
@@ -13,8 +13,8 @@ button:hover { background: #e6b800; }
 </style>
 </head>
 <body>
-<h1>محول الكيبورد العربي</h1>
-<textarea id="input" placeholder="اكتب النص هنا بحروف إنجليزية..."></textarea>
+<h1>امترجم اللغة القطوزية</h1>
+<textarea id="input" placeholder="اكتب النص باللغة القطوزية هنا"></textarea>
 <br>
 <button onclick="convert()">حوّل إلى عربي</button>
 <div id="output"></div>
